--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
     "react-redux": "^8.1.1",
     "react-select": "^5.7.4",
     "tailwind-merge": "^1.14.0",
